CMAKE_MINIMUM_REQUIRED(VERSION 2.4.5)

PROJECT(TransferPointScalar)

FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

ADD_EXECUTABLE(TransferPointScalar main.cpp)
TARGET_LINK_LIBRARIES(TransferPointScalar ${VTK_LIBRARIES})

INSTALL(TARGETS TransferPointScalar DESTINATION /usr/local/lib/rk_kcl_tools)